# carroquesi

./: .env.dev-scripts.example  .envrc  .gitignore  .gitleaks.toml  .worktreeinclude  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PRODUCT.md  Procfile  Procfile.local  Procfile.network  README.md  SECURITY.md  TODO.md  cliff.toml  justfile  lefthook.yml  opencode.json
backend/: .env.example  Dockerfile  alembic.ini  justfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 146d45a041f1_add_barcode_cache_table.py  4003ba7fddd1_add_api_keys_table.py  40e24ab12eed_add_is_default_to_list_members.py  4422da887db6_add_allowed_at_to_waitlist_signups.py  465041cfdecb_rename_receipt_scans_receipt_date_to_.py  5ecb72b18efe_make_price_cache_amount_nullable.py  661153072156_list_items_store_to_stores.py  7005338bb031_add_push_notifications.py  7e594e817b43_merge_receipt_and_feedback_heads.py  85b55a5fd5dd_initial_schema.py  87f9e6dd4ce1_create_waitlist_signups_table.py  a181ea7d6f6a_drop_receipt_scan_image_ocr.py  a1b2c3d4e5f6_add_purchased_quantity_to_list_items.py  a3f9c2e10b47_drop_variety_from_list_items.py  b3c4d5e6f7a8_add_user_features_table.py  b6c7d8e9f0a1_add_feedback_submissions.py  c1d2e3f4a5b6_add_list_emoji.py  c26d1ad5d4f6_add_invite_token_to_waitlist_signups.py  d182b25f62a5_add_receipt_tables.py  d4e5f6a7b8c9_add_purchased_at_to_list_items.py  e5f6a7b8c9d0_add_price_tables_and_ean_to_list_items.py  f7a8b9c0d1e2_move_price_to_list_items.py
backend/app/: dependencies.py  main.py
backend/app/core/: config.py  firebase.py  http.py
backend/scripts/: build_shortcut.py  manage_feature.py  scan_tickets.py  seed.py  set_admin.py
backend/tests/: conftest.py  test_admin.py  test_api_key_auth.py  test_api_keys_service.py  test_auth.py  test_barcode.py  test_default_list.py  test_dependencies.py  test_dev_bypass.py  test_due_suggestions.py  test_feature_flags.py  test_feedback.py  test_invites.py  test_items.py  test_lists.py  test_members.py  test_models.py  test_notifications.py  test_prices.py  test_prices_schemas.py  test_push_service.py  test_receipt_matcher.py  test_receipt_parser.py  test_receipt_parser_stores.py  test_receipt_router.py  test_shortcut_plist.py  test_shortcuts_router.py  test_suggestions.py  test_waitlist.py
(+401 files in other folders)
