[project]
name = "carroquesi-backend"
version = "0.1.0"
description = "CarroQueSí API – OCR and frequency analysis service"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.135.1",
    "firebase-admin>=7.2.0",
    "pydantic-settings>=2.13.1",
    "sqlmodel>=0.0.37",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
