[project]
name = "carroquesi-backend"
version = "0.19.2"
description = "CarroQueSí API – grocery list and receipt analysis service"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.135.1",
    "firebase-admin>=7.2.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "rapidfuzz>=3.14.5",
    "sqlmodel>=0.0.37",
    "uvicorn[standard]>=0.41.0",
]

[tool.fastapi]
entrypoint = "app.main:app"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.0",
    "ruff>=0.14.0",
]
scripts = [
    "playwright>=1.49.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"scripts/seed.py" = ["E501"]
"alembic/versions/*.py" = ["E501"]
"tests/*.py" = ["E501"]
"app/dependencies.py" = ["UP040"]
